--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <center>
             <h1 style="font-size: 30px;">GPA Calculator</h1>
             <div style = 'font-size: 25px; background-color: grey; border-radius: 25px;'>
-                <a href = 'login.html'>
+                <a href = "{{ url_for('auth.login') }}">
                     <button >Login/Signup</button>
                 </a>
             </div>
