--- a/templates/login.html
+++ b/templates/login.html
@@ -13,20 +13,20 @@
             Login/Signup
         </h1>
 
-        <form action = "/login" method = "post" class = "login">
+        <form action="{{ url_for('auth.login') }}" method="POST" class="login">
             <div>
-                <label for = "user">Username:</label>
-                <input type="text" id="user" name = "user" placeholder="Username" required>
+                <label for = "username">Username:</label>
+                <input type="text" id="username" name = "username" placeholder="Username" required>
             </div>
             <br>
             <div>
                 <label for = "password">Password:</label>
-                <input type="password" id="pass" name = "password" placeholder="Password" required>
+                <input type="password" id="password" name = "password" placeholder="Password" required>
             </div>
             <br>
             <div>
                 <input type="submit" name = "submit" value = "Login">
-                <a href="register.html">No Account? Register Here</a>
+                <a href="{{ url_for( 'auth.register') }}">No Account? Register Here</a>
             </div>
         </form>
     </body>
