--- a/templates/register.html
+++ b/templates/register.html
@@ -12,20 +12,20 @@
         Register
     </h1>
 
-    <form action="results.html" class="register" method="get">
+    <form action="{{ url_for('auth.register') }}" method="POST" class="register">
         <div>
-            <label for="user">Username:</label>
-            <input type="text" id="user" name="user" placeholder="Username" required>
+            <label for="username">Username:</label>
+            <label for="username"></label><input type="text" id="username" name="username" placeholder="Username" required>
         </div>
         <br>
         <div>
             <label for="password">Password:</label>
-            <input type="password" id="pass" name="password" placeholder="Password" required>
+            <input type="password" id="password" name="password" placeholder="Password" required>
         </div>
         <br>
         <div>
             <input type="submit" name = "submit" value = "Register">
-            <a href="login.html">Already have an Account? Log in Here</a>
+            <a href="{{ url_for('auth.login') }}">Already have an Account? Log in Here</a>
         </div>
     </form>
 
