--- a/templates/register.html
+++ b/templates/register.html
@@ -1,33 +1,49 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GPA Calc</title>
     <!-- <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css"/> 
     <script type="module" defer src="https://pyscript.net/alpha/pyscript.js"></script> -->
-</head>
-<body>
-    <h1 align='center' style="font-size: 30px;">
-        Register
-    </h1>
+  </head>
+  <body>
+    <h1 align="center" style="font-size: 30px">Register</h1>
 
-    <form action="{{ url_for('auth.register') }}" method="POST" class="register">
-        <div>
-            <label for="username">Username:</label>
-            <label for="username"></label><input type="text" id="username" name="username" placeholder="Username" required>
-        </div>
-        <br>
-        <div>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" placeholder="Password" required>
-        </div>
-        <br>
-        <div>
-            <input type="submit" name = "submit" value = "Register">
-            <a href="{{ url_for('auth.login') }}">Already have an Account? Log in Here</a>
-        </div>
+    <form
+      action="{{ url_for('auth.register') }}"
+      method="POST"
+      class="register"
+    >
+      <div>
+        <label for="username">Username:</label>
+        <label for="username"></label
+        ><input
+          type="text"
+          id="username"
+          name="username"
+          placeholder="Username"
+          required
+        />
+      </div>
+      <br />
+      <div>
+        <label for="password">Password:</label>
+        <input
+          type="password"
+          id="password"
+          name="password"
+          placeholder="Password"
+          required
+        />
+      </div>
+      <br />
+      <div>
+        <input type="submit" name="submit" value="Register" />
+        <a href="{{ url_for('auth.login') }}"
+          >Already have an Account? Log in Here</a
+        >
+      </div>
     </form>
-
-</body>
+  </body>
 </html>
