--- a/templates/test.html
+++ b/templates/test.html
@@ -1,32 +1,41 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>GPA Calc</title>
-        <!-- <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css"/> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GPA Calc</title>
+    <!-- <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css"/> 
         <script type="module" defer src="https://pyscript.net/alpha/pyscript.js"></script> -->
-    
-    </head>
-    <body>
-        <h1 align = 'center' style="font-size: 30px;">
-            Login/Signup
-        </h1>
+  </head>
+  <body>
+    <h1 align="center" style="font-size: 30px">Login/Signup</h1>
 
-        <form action = "results.html" method = "post" class = "login">
-            <div>
-                <label for = "user">Username:</label>
-                <input type="text" id="user" name = "user" placeholder="Username" required>
-            </div>
-            <br>
-            <div>
-                <label for = "password">Password:</label>
-                <input type="password" id="pass" name = "password" placeholder="Password" required>
-            </div>
-            <br>
-            <div>
-                <input type="submit" name = "submit" value = "Login">
-            </div>
-        </form>
-    </body>
+    <form action="results.html" method="post" class="login">
+      <div>
+        <label for="user">Username:</label>
+        <input
+          type="text"
+          id="user"
+          name="user"
+          placeholder="Username"
+          required
+        />
+      </div>
+      <br />
+      <div>
+        <label for="password">Password:</label>
+        <input
+          type="password"
+          id="pass"
+          name="password"
+          placeholder="Password"
+          required
+        />
+      </div>
+      <br />
+      <div>
+        <input type="submit" name="submit" value="Login" />
+      </div>
+    </form>
+  </body>
 </html>
