--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,5 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GPACalc</title>
-    <!-- <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css"/> 
-        <script type="module" defer src="https://pyscript.net/alpha/pyscript.js"></script> -->
-  </head>
-
-  <body>
+    {% extends "base.html" %}
+    {% block content %}
     <center>
       <h1 style="font-size: 30px">GPA Calculator</h1>
       <div style="font-size: 25px; background-color: grey; border-radius: 25px">
@@ -17,5 +8,4 @@
         </a>
       </div>
     </center>
-  </body>
-</html>
+    {% endblock %}
