--- a/templates/base.html
+++ b/templates/base.html
@@ -1,19 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    {% if signed_in %}
-        ...
-    {% else %}
-        ...
-    {% endif %}
-    <div id="content">
-        {% block content %}{% endblock %}
-    </div>
-
-</body>
+  </head>
+  <body>
+    {% if signed_in %} ... {% else %} ... {% endif %}
+    <div id="content">{% block content %}{% endblock %}</div>
+  </body>
 </html>
