--- a/templates/login.html
+++ b/templates/login.html
@@ -1,42 +1,31 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GPA Calc</title>
-    <!-- <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css"/> 
-        <script type="module" defer src="https://pyscript.net/alpha/pyscript.js"></script> -->
-  </head>
-  <body>
-    <h1 align="center" style="font-size: 30px">Login/Signup</h1>
-
-    <form action="{{ url_for('auth.login') }}" method="POST" class="login">
-      <div>
-        <label for="username">Username:</label>
-        <input
-          type="text"
-          id="username"
-          name="username"
-          placeholder="Username"
-          required
-        />
-      </div>
-      <br />
-      <div>
-        <label for="password">Password:</label>
-        <input
-          type="password"
-          id="password"
-          name="password"
-          placeholder="Password"
-          required
-        />
-      </div>
-      <br />
-      <div>
-        <input type="submit" name="submit" value="Login" />
-        <a href="{{ url_for( 'auth.register') }}">No Account? Register Here</a>
-      </div>
-    </form>
-  </body>
-</html>
+{% extends "base.html" %} {% block content %}
+<h1 align="center" style="font-size: 30px">Login/Signup</h1>
+<form action="{{ url_for('auth.login') }}" method="POST" class="login">
+  <div>
+    <label for="username">Username:</label>
+    <input
+      type="text"
+      id="username"
+      name="username"
+      placeholder="Username"
+      required
+    />
+  </div>
+  <br />
+  <div>
+    <label for="password">Password:</label>
+    <input
+      type="password"
+      id="password"
+      name="password"
+      placeholder="Password"
+      required
+    />
+  </div>
+  <br />
+  <div>
+    <input type="submit" name="submit" value="Login" />
+    <a href="{{ url_for( 'auth.register') }}">No Account? Register Here</a>
+  </div>
+</form>
+{% endblock %}
