--- a/templates/base.html
+++ b/templates/base.html
@@ -4,34 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel = "stylesheet" href = "style.css">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}">>
   </head>
   <body>
-    {% if current_user is not None and current_user.is_authenticated() %} 
-      <header>
-        <nav>
-          <ul class = "navLinks">
-            <li><a href = "#">Dashboard</a></li>
-            <li><a href = "#">How To Use</a></li>
-            <li><a href = "#">Logout</a></li>
-          </ul>ye
-        </nav>
-        <a class = "cta" href="#"><button>Test</button></a>
-      </header>
-
-
-    {% else %}
-    <header>
-      <nav>
-        <ul class = "navLinks">
-          <li><a href = "#">Dashbaord</a></li>
-          <li><a href = "#">How To Use</a></li>
-          <li><a href = "#">Login</a></li>
-        </ul>
-      </nav>
-      <a class = "cta" href="#"><button>Test</button></a>
-    </header>
-    {% endif %}
+  <header>
+    <nav>
+      <ul class = "navLinks">
+        <li><a href = "{{ url_for("home.home") + "#help" }}">How To Use</a></li>
+        {% if current_user and current_user.is_authenticated %}
+            <li><a href = "{{ url_for("auth.logout") }}">Logout</a></li>
+        {% else %}
+            <li><a href = "{{ url_for("auth.login") }}">Login</a></li>
+        {% endif %}
+      </ul>
+    </nav>
+  </header>
 
     {% if error is defined %}
     
