--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,7 +1,2 @@
-{% extends "base.html" %} {% block content %}
-    {% for class in classes %}
-
-        {{ class.received_grade }}
-
-    {% endfor %}
-{% endblock %}
+{% extends "base.html" %} {% block content %} {% for class in classes %} {{
+class.received_grade }} {% endfor %} {% endblock %}
