--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,15 @@
       </ul>
     </nav>
   </header>
+  {% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
 
     {% if error is defined %}
     
