--- a/templates/base.html
+++ b/templates/base.html
@@ -19,11 +19,11 @@
       </ul>
     </nav>
   </header>
-  {% with messages = get_flashed_messages() %}
+  {% with messages = get_flashed_messages(with_categories=True) %}
   {% if messages %}
     <ul class=flashes>
-    {% for message in messages %}
-      <li>{{ message }}</li>
+    {% for category, message in messages %}
+      <li class="{{ category }}">{{ message }}</li>
     {% endfor %}
     </ul>
   {% endif %}
