--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
         <li><a href = "{{ url_for("home.home") + "#help" }}">How To Use</a></li>
         {% if current_user and current_user.is_authenticated %}
             <li><a href = "{{ url_for("auth.logout") }}">Logout</a></li>
+            <li><a href = "{{ url_for("dashboard.dashboard") }}">Dashboard</a></li>
         {% else %}
             <li><a href = "{{ url_for("auth.login") }}">Login</a></li>
         {% endif %}
