--- a/templates/base.html
+++ b/templates/base.html
@@ -4,32 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}">>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{url_for('static', filename='style.css')}}"
+    />
+    >
   </head>
   <body>
-  <header>
-    <nav>
-      <ul class = "navLinks">
-        <li><a href = "{{ url_for("home.home") + "#help" }}">How To Use</a></li>
-        {% if current_user and current_user.is_authenticated %}
-            <li><a href = "{{ url_for("auth.logout") }}">Logout</a></li>
-            <li><a href = "{{ url_for("dashboard.dashboard") }}">Dashboard</a></li>
-        {% else %}
-            <li><a href = "{{ url_for("auth.login") }}">Login</a></li>
-        {% endif %}
-      </ul>
-    </nav>
-  </header>
+    <header>
+      <nav>
+        <ul class="navLinks">
+          <!-- prettier-ignore -->
+          <li><a href = "{{ url_for('home.home') + '#help' }}">How To Use</a></li>
+          {% if current_user and current_user.is_authenticated %}
+          <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
+          <li><a href="{{ url_for('dashboard.dashboard') }}">Dashboard</a></li>
+          {% else %}
+          <li><a href="{{ url_for('auth.login') }}">Login</a></li>
+          {% endif %}
+        </ul>
+      </nav>
+    </header>
 
-  {% with messages = get_flashed_messages(with_categories=True) %}
-  {% if messages %}
-    <ul class=flashes>
-    {% for category, message in messages %}
+    {% with messages = get_flashed_messages(with_categories=True) %} {% if
+    messages %}
+    <ul class="flashes">
+      {% for category, message in messages %}
       <li class="{{ category }}">{{ message }}</li>
-    {% endfor %}
+      {% endfor %}
     </ul>
-  {% endif %}
-  {% endwith %}
+    {% endif %} {% endwith %}
 
     <div id="content">{% block content %}{% endblock %}</div>
   </body>
