--- a/static/style.css
+++ b/static/style.css
@@ -1,56 +1,102 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+/* Importing the fonts that we will use */
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@1&family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Honk&display=swap');
 
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    background-color: #afbcb7;
+
+/* Creates a background color for the entire website */
+body {
+  background: #114454;
 }
 
-li, a, button {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    color: #edf0f1;
-    text-decoration: none;
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
+/* Add a black background color to the top navigation */
+.navBar {
+    background-color: #165751;
+    overflow: hidden;
     align-items: center;
-    padding: 30px 10%;
+    font-family: 'Montserrat', sans-serif;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .navBar a {
+    float: right;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    padding-top: 15px;
+    text-decoration: none;
+    font-size: 20px;
+  }
+  
+  /* Change the color of links on hover */
+  .navBar a:hover {
+    background-color: #ddd;
+    color: #165751;
+  }
+  
+  /* Add a color to the active/current link */
+  .navBar a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
+
+  .logo {
+    float: left;
+    font-family: 'Honk', system-ui;;
+  }
+
+  /* Creates a box for the login form to go on */
+.loginBox {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    background-color: #18637B;
+    overflow: hidden;
+    width: 500px;
+    padding: 50px;
+    margin: auto;
+    border-radius: 25px;
+
+  }
+
+  /* Makes the login text better formatted within the loginBox */
+.userLogin {
+  text-align: center;
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Montserrat', sans-serif;
+  color: #ddd;
+}
+/* Makes the password text better formatted within the loginBox */
+.passLogin {
+  text-align: center;
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Montserrat', sans-serif;
+  color: #ddd;
 }
 
-.navLinks {
-    list-style: none;
+/* The header for each page, makes it look bigger and centered */
+.title {
+  text-align: center;
+  font-size: 30px;
+  font-family: 'Montserrat', sans-serif;
+  color: #ddd;
+  
 }
 
-.navLinks li {
-    display: inline-block;
-    padding: 0px 20px;
+/* Changes the input button to look better with no border and a better font */
+input[type = submit] {
+  padding: 5px 15px;
+  border: 0 none;
+  font-family: 'Montserrat', sans-serif;
 }
 
-.navLinks li a {
-    transition: all 0.3s ease 0s;
+/* The button that takes you between the login page and the register page */
+.registerButton {
+  font-family: 'Montserrat', sans-serif;
+  color: #27a8ee;
 }
 
-.navLinks li a:hover {
-    color: #0088a9;
-}
-
-button {
-    padding: 9px 25px;
-    background-color: rgba(0, 136, 169, 1);
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
-}
-
-button:hover {
-    background-color: rgba(0, 136, 169, 0.8);
-}
 
 error {
     background-color: rgba(239, 11, 11, 0.8);
@@ -60,45 +106,137 @@ information {
     background-color: rgba(47, 237, 9, 0.8);
 }
 
-/* #9thGrade {
-    width:25%;
-    float: left;
-}
-#10thGrade {
-    width:25%;
-    margin: 0 auto;
-}
-#11thGrade {
-    width:25%;
-    margin: 0 auto;
-}
-#12thGrade {
-    width:25%;
-    float: right;
-} */
-
+/* Allows the  */
 #gradeFormsContainer {
     display: flex;
     justify-content: space-between;
 }
 
-/* #9thGrade{
-    background-color: #0088a9;
-    width: 25%;
-    margin: 0 10px; 
+.mainScreen {
+  height: 650px;
+  padding-top: 1px;
+  background-color: #18637B;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px;
+
 }
-#10thGrade{
-    background-color: antiquewhite;
-    width: 25%;
-    margin: 0 10px; 
+
+.helpScreen {
+  height: 650px;
+  margin-top: 10px;
+  padding-top: 10px;
+  background-color: #3B8D61;
+  border-radius: 25px;
 }
-#11thGrade{
-    background-color: yellowgreen;
-    width: 25%;
-    margin: 0 10px; 
+
+.steps {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 35px;
+  text-align: center;
+  color: #ddd;
+  padding-left: 10px;
+  padding-right: 10px;
 }
-#12thGrade {
-    background-color: violet;
-    width: 25%;
-    margin: 0 10px; 
-} */
+
+.helpTitle {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 50px;
+  text-align: center;
+  color: #ddd;
+}
+
+.mainTitle {
+  font-family: 'Honk', system-ui;
+  font-size: 100px;
+  text-align: center;
+  margin-top: 3%;
+  color: #ddd;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.mainText {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 50px;
+  text-align: center;
+  margin-top: 10%;
+  color: #ddd;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+
+/* Adds a bottom bar to every page for the copyright information */
+.bottomBar {
+  padding: 10px 14px;
+  background-color: #94BF6E;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0%;
+  width: 97%;
+}
+
+.mainCreators {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 10px;
+  display: flex;
+  color: #000000;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.table {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  width: 50%;
+  padding: 30px;
+  background-color: #18637B;
+  border-radius: 25px;
+  margin: auto;
+  margin-top: 10px;
+}
+
+.tableHeader {
+  border: 5px solid #3B8D61;
+  border-radius: 25px;
+  color: #ddd;
+}
+
+.gradeForm {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  font-family: 'Montserrat', sans-serif;
+  color: #ddd;
+  text-align: center;
+}
+
+.gpaReport {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  color: #ddd;
+}
+
+.pdfButton {
+  padding: 5px 15px;
+  border: 0 none;
+  display: flex;
+  margin: auto;
+  align-content: center;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.tableContent {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  color: #ddd;
+}
