--- a/templates/login.html
+++ b/templates/login.html
@@ -1,31 +1,42 @@
+<!-- Webpage for logging in  -->
+
 {% extends "base.html" %} {% block content %}
-<h1 align="center" style="font-size: 30px">Login/Signup</h1>
-<form action="{{ url_for('auth.login') }}" method="POST" class="login">
-  <div>
-    <label for="username">Username:</label>
-    <input
-      type="text"
-      id="username"
-      name="username"
-      placeholder="Username"
-      required
-    />
-  </div>
-  <br />
-  <div>
-    <label for="password">Password:</label>
-    <input
-      type="password"
-      id="password"
-      name="password"
-      placeholder="Password"
-      required
-    />
-  </div>
-  <br />
-  <div>
-    <input type="submit" name="submit" value="Login" />
-    <a href="{{ url_for( 'auth.register') }}">No Account? Register Here</a>
-  </div>
-</form>
+<!-- Title for the page -->
+<h1 class = "title">Login</h1>
+<!-- Div for the box that the form sits on -->
+<div class = "loginBox">
+  <!-- Form that sends an action to auth.login to check if the username and password exist within the database using the POST method -->
+  <form action="{{ url_for('auth.login') }}" method="POST" class="login">
+    <!-- The class for the username, contains the Username label and the text box for inputting it -->
+    <div class = "userLogin">
+      <label for="username">Username:</label>
+      <input
+        type="text"
+        id="username"
+        name="username"
+        placeholder="Username"
+        required
+      />
+    </div>
+    <br />
+    <!-- The class for the password, contains the Password label and the text box for inputting it -->
+    <div class = "passLogin">
+      <label for="password">Password:</label>
+      <input
+        type="password"
+        id="password"
+        name="password"
+        placeholder="Password"
+        required
+      />
+    </div>
+    <br/>
+    <div>
+      <!-- Submit button -->
+      <input type="submit" name="submit" value="Login"/>
+      <!-- Link to swap to the register page -->
+      <a class = "registerButton" href="{{ url_for( 'auth.register') }}">No Account? Register Here.</a>
+    </div>
+  </form>
+</div>
 {% endblock %}
