--- a/templates/register.html
+++ b/templates/register.html
@@ -1,34 +1,36 @@
 {% extends "base.html" %} {% block content %}
-<h1 class = "title">Register</h1>
-<div class = "loginBox">
-<form action="{{ url_for('auth.register') }}" method="POST" class="register">
-  <div class = "userLogin">
-    <label for="username">Username:</label>
-    <label for="username"></label
-    ><input
-      type="text"
-      id="username"
-      name="username"
-      placeholder="Username"
-      required
-    />
-  </div>
-  <br />
-  <div class = "passLogin">
-    <label for="password">Password:</label>
-    <input
-      type="password"
-      id="password"
-      name="password"
-      placeholder="Password"
-      required
-    />
-  </div>
-  <br />
-  <div>
-    <input type="submit" name="submit" value="Register" />
-    <a class = "registerButton" href="{{ url_for('auth.login') }}">Already have an Account? Log in Here.</a>
-  </div>
-</form>
+<h1 class="title">Register</h1>
+<div class="loginBox">
+  <form action="{{ url_for('auth.register') }}" method="POST" class="register">
+    <div class="userLogin">
+      <label for="username">Username:</label>
+      <label for="username"></label
+      ><input
+        type="text"
+        id="username"
+        name="username"
+        placeholder="Username"
+        required
+      />
+    </div>
+    <br />
+    <div class="passLogin">
+      <label for="password">Password:</label>
+      <input
+        type="password"
+        id="password"
+        name="password"
+        placeholder="Password"
+        required
+      />
+    </div>
+    <br />
+    <div>
+      <input type="submit" name="submit" value="Register" />
+      <a class="registerButton" href="{{ url_for('auth.login') }}"
+        >Already have an Account? Log in Here.</a
+      >
+    </div>
+  </form>
 </div>
 {% endblock %}
