--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <div class="mainScreen">
     <p class="mainTitle"><b>GPA Wizard</b></p>
     <p class="mainText">
-      A quick and easy way to calculate your GPA in seconds!
+      A quick and easy way to calculate your weighted & unweighted GPA in seconds! (FBLA Intro to Programming)
     </p>
   </div>
   <!-- Creates the div on the right side with the help part of the page -->
