--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -29,7 +29,7 @@
             <h3 class="tableContent">{{ cls.name }}</h3>
             <p class="tableContent">{{ cls.received_grade }}</p>
 
-            <form action="/dashboard/delete_class/{{ cls.id }}" method="GET">
+            <form action="{{ url_for('dashboard.delete_class', class_id=cls.id) }}" method="GET">
                 <input id="deleteClass" type="submit" value="Remove">
             </form>
           {% endif %}
